Branding: apply Tuakiri branding

--- a/app/views/errors/bad_request.html.slim
+++ b/app/views/errors/bad_request.html.slim
@@ -1,4 +1,4 @@
-= page_header('AAF Reporting Service')
+= page_header('Tuakiri Reporting Service')
 
 = error_message('Bad Request') do
   p Oops, we received a request from your browser that didn't make sense. Sorry
