--- a/app/views/errors/forbidden.html.slim
+++ b/app/views/errors/forbidden.html.slim
@@ -1,4 +1,4 @@
-= page_header('AAF Reporting Service')
+= page_header('Tuakiri Reporting Service')
 
 = error_message('Forbidden') do
   p Oops, you clicked something we didn't expect you to click, and tried to do
