--- a/app/views/errors/unauthorized.html.slim
+++ b/app/views/errors/unauthorized.html.slim
@@ -1,4 +1,4 @@
-= page_header('AAF Reporting Service')
+= page_header('Tuakiri Reporting Service')
 
 = error_message('Unauthorized') do
   p Oops, your account is no longer available for use, so we can't continue
