--- a/app/views/shared/_no_report_permission.html.slim
+++ b/app/views/shared/_no_report_permission.html.slim
@@ -10,6 +10,6 @@
   p
     | Please contact your organization to solve this issue
   p
-    | You can also contact AAF support at &nbsp;
-    a> href="mailto:support@aaf.edu.au" support@aaf.edu.au
+    | You can also contact Tuakiri support at &nbsp;
+    a> href="mailto:tuakiri@reannz.co.nz" tuakiri@reannz.co.nz
     | for more information
