--- a/app/views/shared/_quick_instruction.html.slim
+++ b/app/views/shared/_quick_instruction.html.slim
@@ -5,6 +5,6 @@
   hr.thin
 
   p
-    | You can contact AAF support at &nbsp;
-    a> href="mailto:support@aaf.edu.au" support@aaf.edu.au
+    | You can contact Tuakiri support at &nbsp;
+    a> href="mailto:tuakiri@reannz.co.nz" tuakiri@reannz.co.nz
     | for more information
