--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,6 +1,6 @@
 .jumbotron
   .container
-    h2 Welcome to AAF Reporting Service
+    h2 Welcome to Tuakiri Reporting Service
     p Here, federation users and subscribers can view reports about the
       federation. Subscribers can see detailed reports relating to their
       services. Log in to start viewing reports.
