--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,7 @@ html lang='en'
     meta charset='utf-8'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
 
-    title AAF Reporting Service
+    title Tuakiri Reporting Service
 
     = csrf_meta_tags
 
@@ -15,7 +15,7 @@ html lang='en'
     = disable_animations if Rails.env.test?
   body
     - auth = @subject ? :logout : :login
-    = aaf_header(title: 'AAF Reporting Service', environment: environment_string, auth: auth)
+    = aaf_header(title: 'Tuakiri Reporting Service', environment: environment_string, auth: auth)
       = nav_bar do
         - if @subject
           = nav_first_item('Dashboard', dashboard_path)
